--- a/toolkit/components/extensions/test/mochitest/test_ext_downloads.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_downloads.html
@@ -13,6 +13,8 @@
 <script type="text/javascript">
 "use strict";
 
+const BASE = "http://mochi.test:8888/tests/toolkit/components/extensions/test/mochitest";
+
 function backgroundScript() {
   function download(url) {
     return new Promise(resolve => {
